<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/preference_category_notifications">

        <CheckBoxPreference
            android:key="@string/enable_notifications"
            android:title="@string/preference_enable_notifications_title"
            android:defaultValue="true"
            android:summary="@string/preference_enable_notifications_description" />

        <EditTextPreference
            android:key="@string/notification_distance"
            android:inputType="number"
            android:defaultValue="100"
            android:title="@string/preference_notifications_distance_title"
            android:summary="@string/preference_notifications_distance_description" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_category_notification_types">

        <CheckBoxPreference
            android:key="@string/enable_fire_notifications"
            android:defaultValue="true"
            android:title="@string/preference_fire_title" />

        <CheckBoxPreference
            android:key="@string/enable_flood_notifications"
            android:defaultValue="true"
            android:title="@string/preference_flood_title" />

        <CheckBoxPreference
            android:key="@string/enable_alpine_notifications"
            android:defaultValue="true"
            android:title="@string/preference_alpine_title" />

        <CheckBoxPreference
            android:key="@string/enable_incident_notifications"
            android:defaultValue="true"
            android:title="@string/preference_incident_title" />

        <CheckBoxPreference
            android:key="@string/enable_major_event_notifications"
            android:defaultValue="true"
            android:title="@string/preference_major_event_title" />

        <CheckBoxPreference
            android:key="@string/enable_roadwork_notifications"
            android:defaultValue="true"
            android:title="@string/preference_roadwork_title" />


    </PreferenceCategory>

</PreferenceScreen>